--- a/static/styles/lib/error.scss
+++ b/static/styles/lib/error.scss
@@ -32,7 +32,7 @@ body {
   }
 
   .bg-graphic {
-	position: absolute;
+	position: fixed;
 	background: no-repeat center center;
 	background-size: contain;
 	z-index: 0;
@@ -40,8 +40,8 @@ body {
 	height: 600px;
 
 	&.bg-graphic-right {
-	  right: 10%;
-	  bottom: 10%;
+	  right: 2%;
+	  bottom: 2%;
 	  background-image: url(/images/login-right.png);
 	}
   }
@@ -62,6 +62,8 @@ body {
 	  font-size: 5vw;
 	  text-transform: uppercase;
 	  margin-bottom: 1em;
+	  max-width: 100%;
+	  overflow: auto;
 	}
 
 	.error-card {
