comment linebreak fix

--- a/views/homework/evaluation.hbs
+++ b/views/homework/evaluation.hbs
@@ -111,7 +111,7 @@
                                     </button>
                                 </form>
                                 <b class="name">{{this.author.firstName}} {{this.author.lastName}}</b>
-                                <p>{{this.comment}}</p>
+                                <pre>{{this.comment}}</pre>
                             </li>
                         {{/ifvalue}}
                     {{/each}}
