--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -19,4 +19,14 @@
         float: right;
         cursor: pointer;
     }
+
+    .delete-tool {
+        float: right;
+        cursor: pointer;
+        padding-top: 1.4em;
+    }
+
+    .card-tool {
+        cursor: pointer;
+    }
 }
