--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -4,6 +4,10 @@
         <link rel="stylesheet" href="/styles/courses/course.css"/>
     {{/content}}
 
+    {{#content "scripts" mode="append"}}
+        <script src="/scripts/lessons.js" type="text/javascript"></script>
+    {{/content}}
+
     {{#content "page"}}
 
         <section class="section-course">
@@ -43,14 +47,23 @@
                     <div class="list-group">
                         {{#if ltiToolIds}}
                             {{#each ltiToolIds}}
-                                <a href="/courses/{{../_id}}/tools/run/{{this._id}}" target="_blank" class="list-group-item list-group-item-action flex-column align-items-start">
-                                    {{#if logo_url}}
-                                        <img src={{this.logo_url}} class="float-left" style="width:100px; height:auto;"/>
-                                    {{else}}
-                                        <img src="/images/cloud.png" class="float-left" style="width:100px; height:auto;"/>
-                                    {{/if}}
-                                    <span>{{this.name}}</span>
-                                </a>
+                                <div class="card card-block card-tool" onclick="window.open('/courses/{{../_id}}/tools/run/{{this._id}}')">
+                                    <p class="card-title-directory">
+                                        {{#if logo_url}}
+                                            <img src={{this.logo_url}} class="float-left" style="width:100px; height:auto;"/>
+                                        {{else}}
+                                            <img src="/images/cloud.png" class="float-left" style="width:100px; height:auto;"/>
+                                        {{/if}}
+                                        <span>{{this.name}}</span>
+
+                                    <a class="delete-tool"
+                                       href="/courses/{{../_id}}/tools/delete/{{this._id}}"
+                                       target="_blank"
+                                       data-method="delete-material">
+                                        <i class="fa fa-trash-o"></i>
+                                    </a>
+                                    </p>
+                                </div>
                             {{/each}}
                         {{else}}
                             <p class="text-muted list-group-item list-group-item-action flex-column align-items-start">
@@ -72,6 +85,22 @@
                     </div>
                 </div>
             {{/userHasPermission}}
+
+
+            {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
+                {{#content "body"}}
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary btn-close">
+                            Abbrechen
+                        </button>
+
+                        <button type="submit" class="btn btn-primary btn-submit">
+                            Löschen
+                        </button>
+                    </div>
+                {{/content}}
+            {{/embed}}
 
         </section>
     {{/content}}
