--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -290,6 +290,7 @@ header {
 
     @include media-breakpoint-down(xs) {
         margin-bottom: 15px;
+		padding-left: 50px !important;
         background: $colorBeige;
     }
 
