Abgabenanzahl & Notendurchschnitt zu Übersicht

--- a/views/homework/submissions.hbs
+++ b/views/homework/submissions.hbs
@@ -6,8 +6,8 @@
             <th/>
             <th>Vorname</th>
             <th>Nachname</th>
-            <th>Abgegeben</th>
-            <th>Bewertung</th>
+            <th>Abgegeben <span>{{submissionscount}}/{{usercount}}</span></th>
+            <th>Bewertung <span>{{averagerating}}</span></th>
             <th/>
         </tr>
         </thead>
