Fix if no submission

--- a/views/homework/submissions.hbs
+++ b/views/homework/submissions.hbs
@@ -7,7 +7,7 @@
             <th>Vorname</th>
             <th>Nachname</th>
             <th>Abgegeben <span>{{submissionscount}}/{{usercount}}</span></th>
-            <th>Bewertung <span>{{averagerating}}</span></th>
+            <th>Bewertung {{#if averagerating}}<span>{{averagerating}}</span>{{/if}}</th>
             <th/>
         </tr>
         </thead>
