--- a/static/styles/content/search.scss
+++ b/static/styles/content/search.scss
@@ -1,3 +1,4 @@
+@import '../lib/colors.scss';
 .section-search {
     h5 {
         margin-top: 30px;
@@ -24,4 +25,10 @@
 .add-to-lesson {
     float: right;
     cursor: pointer;
+}
+
+.search-results-count {
+    color: #BDBDBD;
+    float: right;
+    font-size: small;
 }
