--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -1,4 +1,8 @@
 {{#extend "lib/loggedin"}}
+    {{#content "scripts" mode="append"}}
+        <script src="/scripts/settings.js" type="text/javascript"></script>
+    {{/content}}
+
     {{#content "page"}}
 
         {{message}}
@@ -19,6 +23,22 @@
                 <div class="form-group">
                     <label>E-Mail-Adresse</label>
                     <input type="email" class="form-control" name="email" value="{{ currentUser.email }}">
+                </div>
+
+                <div class="form-group">
+                    <label>Aktuelles Passwort</label>
+                    <input type="password" name="password" class="form-control form-control-lg" placeholder="***************" required>
+                </div>
+
+                <div class="form-group">
+                    <label>Neues Passwort</label>
+                    <input type="password" name="password_new" id="password_new" class="form-control form-control-lg" placeholder="***************" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
+                           title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl oder Sonderzeichen" >
+                </div>
+
+                <div class="form-group">
+                    <label>Neues Passwort</label>
+                    <input type="password" name="password_control" id="password_control" class="form-control form-control-lg" placeholder="***************" >
                 </div>
 
                 <div class="form-group">
