--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -15,15 +15,22 @@
                         {{#each assignments}}
 							<li class="card assignment {{this.privateclass}}" style="border-left:10px solid {{this.color}}">
                                 <a href="{{this.url}}">	
-									<div class="due">{{this.showdate}}</div>									
+									<div class="dates">{{this.showdate}}</div>									
+                                    <!-- graded, turned in etc. -->
+                                    {{#if this.submissionstats}}
+										<div class="state">
+											<span class="{{this.submissionstatscolor}}">Abgegeben: {{this.submissionstats}}</span><br/>
+											{{#if this.gradedstats}}
+												<span class="{{this.gradedstatscolor}}">Bewertet: {{this.gradedstats}}</span>
+											{{/if}}
+										</div>
+									{{/if}}
                                     <h5 class="title">
 										{{#if this.courseId}}
 											<span>{{this.courseId.name}}</span>
 										{{/if}}
                                         {{this.name}}
                                     </h5>
-                                    <!-- graded, turned in etc. -->
-                                    {{this.status}}
                                     <div class="description">
 										<pre>{{truncate this.description}}</pre>
                                     </div>
