--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -14,14 +14,21 @@
                     <div class="row"><div class="col-lg-8">
                         {{#each assignments}}
                             <li class="card assignment {{this.privateclass}}" style="border-left:10px solid {{this.color}}">
-                                <a href="{{this.url}}">    
+                                <a class="content" href="{{this.url}}">  
                                     <div class="dates">{{this.showdate}}</div>
                                     <!-- graded, turned in etc. -->
                                     {{#if this.submissionstats}}
                                         <div class="state">
                                             <span class="{{this.submissionstatscolor}}">Abgegeben: {{this.submissionstats}}</span><br/>
                                             {{#if this.gradedstats}}
-                                                <span class="{{this.gradedstatscolor}}">Bewertet: {{this.gradedstats}}</span>
+                                                <span class="{{this.gradedstatscolor}}">Bewertet: {{this.gradedstats}}</span><br/>
+                                            {{/if}}
+                                            {{#if this.averagerating}}
+                                                {{#if this.courseId.gradeSystem}}
+                                                    Ø: {{this.averagerating}} 
+                                                {{else}}
+                                                    Ø: {{this.averagerating}} Punkte
+                                                {{/if}}
                                             {{/if}}
                                         </div>
                                     {{/if}}
