--- a/views/homework/submissions.hbs
+++ b/views/homework/submissions.hbs
@@ -46,7 +46,7 @@
 						{{/if}}
 					{{else}}
 						{{#ifvalue submission.grade value=0}}0 Punkte{{/ifvalue}}
-						{{#if submission.grade}}{{submission.grade}} Punkte<{{/if}}
+						{{#if submission.grade}}{{submission.grade}} Punkte{{/if}}
 					{{/if}}
 					</td>
 				<td><i class="fa fa-pencil-square-o" aria-hidden="true"/></td>
