orange for 80% submitted

--- a/static/styles/homework/homework.scss
+++ b/static/styles/homework/homework.scss
@@ -137,6 +137,7 @@
                 clear:right;
                 color:grey;
                 .green{	color:green;}
+                .orange{color:$colorHPIOrange;}
                 .red{	color:red;}
             }
 			.more{
