show num of search result, reformat code (#143)
* show num of search result, reformat code

* also show result count when filtering subjects

* Update search.scss

--- a/static/styles/content/search.scss
+++ b/static/styles/content/search.scss
@@ -25,3 +25,9 @@
     float: right;
     cursor: pointer;
 }
+
+.search-results-count {
+    color: #BDBDBD;
+    float: right;
+    font-size: small;
+}
