384 wenn abgabedeadline naht counter anzeigen (#146)
* Bei >5 Tagen bis zur Abgabe mit kleineren Angaben arbeiten

Nur in der Übersicht, damit man sich in der Detailansicht die genaue
Abgabezeit ansehen kann.

* UX improvements

* Highlighting and Strings improvements

* fix & cleanup

* tiny fix

* travis fix

* tabs -> spaces fix

* Fix: mixed tab & spaces

* replaced more tabs with spaces

* more tiny fixes

* reformatter

* tiny bugfix - no submission

--- a/static/styles/homework/homework.scss
+++ b/static/styles/homework/homework.scss
@@ -91,7 +91,6 @@
     .assignment {
       width: 100%;
       position: relative;
-
       /* max-width: 700px;
       margin: 5px; */
       padding: 10px;
@@ -111,7 +110,7 @@
       }
       .description {
         /* margin: 10px 75px 10px 0; */
-        margin: 10px 0;
+        margin: 10px 0 25px;
         color: grey;
         @include media-breakpoint-down(xs) {
           margin-right: 25px;
@@ -126,7 +125,6 @@
           overflow: hidden;
         }
       }
-
       .dates {
         float: right;
         text-align: right;
