--- a/static/styles/homework/assignment.scss
+++ b/static/styles/homework/assignment.scss
@@ -5,14 +5,12 @@
   width: 100%;
   clear: both;
 
-  .due {
+  .dates {
     float: right;
     padding: 10px 0;
     margin: 0;
     color: grey;
-    &:before {
-      content: "Abgabe: ";
-    }
+    text-align: right;
   }
 
   .edit {
