DESC option added

--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -14,7 +14,18 @@
                 <div class="form-group sort">
                     <select name="sort" id="sortselection" data-placeholder="Sortieren">
                         {{#each sortmethods}}
-                            <option value="{{this.functionname}}" {{#if this.active}}selected="{{this.active}}"{{/if}}>{{this.title}}</option>
+                            {{#if this.active}}
+                                {{#if this.desc}}
+                                    <option value='{"fn":"{{this.functionname}}","desc":false }'>{{this.title}} ▲</option>
+                                    <option value='{"fn":"{{this.functionname}}","desc":true }' selected="selected">{{this.title}} ▼</option>
+                                {{else}}
+                                    <option value='{"fn":"{{this.functionname}}","desc":false }' selected="selected">{{this.title}} ▲</option>
+                                    <option value='{"fn":"{{this.functionname}}","desc":true }'>{{this.title}} ▼</option>
+                                {{/if}}
+                            {{else}}
+                                <option value='{"fn":"{{this.functionname}}","desc":false }'>{{this.title}} ▲</option>
+                                <option value='{"fn":"{{this.functionname}}","desc":true }'>{{this.title}} ▼</option>
+                            {{/if}}
                         {{/each}}
                     </select>
                 </div>
