--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -1,6 +1,11 @@
 {{#extend "lib/default"}}
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/lib/loggedin.css"/>
+        <link rel="stylesheet" href="/styles/lib/feedback-button.css"/>
+    {{/content}}
+
+    {{#content "scripts" mode="append"}}
+        <script src="/scripts/loggedin.js" type="text/javascript"></script>
     {{/content}}
 
     {{#content "body"}}
@@ -113,6 +118,17 @@
                     </div>
                 </div>
             </div>
+
+            <a class="submit-helpdesk">
+                {{#embed "lib/components/feedback-button"}}
+                {{/embed}}
+            </a>
+
+            {{#embed "lib/components/modal-form" method="post" class="feedback-modal"}}
+                {{#content "fields"}}
+                    {{> "lib/forms/form-helpdesk"}}
+                {{/content}}
+            {{/embed}}
         </section>
     {{/content}}
 {{/extend}}
