--- a/views/courses/run-lti.hbs
+++ b/views/courses/run-lti.hbs
@@ -5,6 +5,6 @@
     {{/content}}
 
     {{#content "page"}}
-        <iframe class="lti-frame" target="_parent" src="/courses/{{courseId}}/tools/run/{{tool._id}}"></iframe>
+        <iframe class="lti-frame" src="/courses/{{courseId}}/tools/run/{{tool._id}}"></iframe>
     {{/content}}
 {{/extend}}
