show succes message

--- a/views/lib/forms/form-helpdesk.hbs
+++ b/views/lib/forms/form-helpdesk.hbs
@@ -14,6 +14,6 @@
 </div>
 <div class="form-group">
     <label class="control-label" for="message">Ihr Anliegen</label>
-    <textarea class="form-control" cols="50" name="message" rows="6" required>
+    <textarea class="form-control" id="message" cols="50" name="message" rows="6" required>
     </textarea>
 </div>
