--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -124,7 +124,7 @@
                 {{/embed}}
             </a>
 
-            {{#embed "lib/components/modal-form" method="post" class="feedback-modal"}}
+            {{#embed "lib/components/modal-form" class="feedback-modal"}}
                 {{#content "fields"}}
                     {{> "lib/forms/form-helpdesk"}}
                 {{/content}}
