--- a/views/lib/forms/form-helpdesk.hbs
+++ b/views/lib/forms/form-helpdesk.hbs
@@ -1,9 +1,9 @@
 <div class="form-group">
     <label class="control-label" for="title">Titel für Ihr Feedback</label>
-    <input type="text" name="title" id="title" size="30" maxlength="60" placeholder="Titel für Ihr Feedback" class="form-control">
+    <input type="text" name="title" id="title" size="30" maxlength="60" placeholder="Titel für Ihr Feedback" class="form-control" required>
 </div>
 <div class="form-group">
-    <label class="control-label" for="email">Ihre E-Mail-Adresse</label>
+    <label class="control-label" for="email">Ihre E-Mail-Adresse</label><span class="text-muted float-right"> (optional)</span>
     <input type="email"
            name="email"
            id="email"
