--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -2,7 +2,10 @@
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/homework/homework.css"/>
     {{/content}}
-
+    {{#content "scripts" mode="append"}}
+        <script src="/scripts/lessons.js" type="text/javascript"></script>
+    {{/content}}
+    
     {{#content "page"}}
         <div class="route-homework">
             <section class="section-homework">
@@ -74,12 +77,13 @@
                                 {{#ifvalue this.teacherId value=this.currentUser._id}}
                                     {{#each this.actions}}
                                         {{#if this.method}}
-                                            <form action="{{this.link}}" method="post" class="inline">
-                                                <input type="hidden" name="_method" value="{{this.method}}"/>
-                                                <button type="submit" class="btn btn-secondary btn-sm {{this.class}}">
-                                                    <i class="fa fa-{{this.icon}}"></i> {{this.label}}
-                                                </button>
-                                            </form>
+                                                <a class="{{this.class}}"
+                                                   href="{{this.link}}"
+                                                   target="_blank"
+                                                   data-method="delete-material"
+                                                   data-name="{{../name}}">
+                                                    <i class="fa fa-{{this.icon}}"></i>
+                                                </a>
                                         {{else}}
                                             <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}">
                                                 <i class="fa fa-{{this.icon}}"></i> {{this.label}}
@@ -106,6 +110,20 @@
                 {{#embed "lib/components/modal-form" action="/homework/" method="post" class="add-modal"}}
                     {{#content "fields"}}
                         {{> "homework/form-assignment"}}
+                    {{/content}}
+                {{/embed}}
+                {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
+                    {{#content "body"}}
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary btn-close">
+                                Abbrechen
+                            </button>
+
+                            <button type="submit" class="btn btn-primary btn-submit">
+                                Löschen
+                            </button>
+                        </div>
                     {{/content}}
                 {{/embed}}
             </section>
