--- a/views/homework/submission.hbs
+++ b/views/homework/submission.hbs
@@ -1,3 +1,10 @@
+{{#content "scripts" mode="append"}}
+    <script src="/vendor/ckeditor/ckeditor.js"></script>
+    <script>
+        CKEDITOR.replace( 'evaluation' );
+    </script>
+{{/content}}
+
 <section id="submission" class="tab-content section-homeworkdetails">
 	<h5>Abgabe</h5>
 	<div class="comment">
