editor almost everywhere

--- a/views/homework/assignment.hbs
+++ b/views/homework/assignment.hbs
@@ -38,6 +38,10 @@
             }
         });
         </script>
+        <script src="/vendor/ckeditor/ckeditor.js"></script>
+        <script>
+            CKEDITOR.replace( 'evaluation' );
+        </script>
     {{/content}}
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/homework/assignment.css"/>
