--- a/static/styles/homework/assignment.scss
+++ b/static/styles/homework/assignment.scss
@@ -39,7 +39,7 @@
   .tab-content {
     display: none;
     width: 100%;
-
+    clear:both;
     &.active {
       display: block;
     }
@@ -52,13 +52,14 @@
     .comment,
     .feedback {
       color: grey;
-      pre {
-        font: inherit;
-        display: block;
-        width: 100%;
-        outline: none;
-        border: none;
-        background: transparent;
+      max-width:700px;
+      margin: .5rem 0;
+      &.editor{
+        max-width:100%;
+      }
+      pre{
+        font-family:inherit;
+        font-size:1em;
         margin-top: .5rem;
       }
     }
@@ -88,89 +89,6 @@
     .nav-tabs .nav-item + .nav-item {
       margin-left: 0;
       margin-left: 5px;
-    }
-  }
-}
-
-.material {
-  margin: 0;
-  padding: 10px 10px 0;
-  ul {
-    width: 100%;
-    overflow: auto;
-    white-space: nowrap;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    li {
-      background-color: #ddd;
-      position: relative;
-      display: inline-block;
-      margin: 10px 5px;
-      width: 160px;
-      height: 120px;
-      img {
-        position: absolute;
-        width: 100%;
-        height: 90px;
-        top: 0;
-        left: 0;
-        right: 0;
-      }
-      p.title {
-        position: absolute;
-        height: 25px;
-        bottom: 0;
-        left: 10px;
-        right: 10px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        margin: 0;
-      }
-      .buttons {
-        display: none;
-        width: 100%;
-        margin: 0 auto;
-        bottom: 15px;
-        position: absolute;
-        text-align: center;
-
-        a {
-          display: inline-block;
-          padding: 5px;
-          margin: 0 3px;
-          width: 34px;
-          font-size: 20px;
-          line-height: 20px;
-          background-color: grey;
-          color: #ddd;
-          border-radius: 5px;
-        }
-      }
-      a.add {
-        position: absolute;
-        top: 46px;
-        bottom: 46px;
-        left: 65px;
-        right: 65px;
-        font-size: 28px;
-        line-height: 28px;
-        color: grey;
-      }
-      &:hover {
-        img {
-          height: 0;
-        }
-        p.title {
-          top: 10px;
-          height: 50px;
-          white-space: normal;
-          word-wrap: break-word;
-        }
-        .buttons {
-          display: block;
-        }
-      }
     }
   }
 }
